--- a/config.json.template
+++ b/config.json.template
@@ -2,5 +2,6 @@
 	"token": "",
 	"db_filename": "lyricfetch.db"
     "SPOTIFY_CLIENT_ID": "",
-    "SPOTIFY_CLIENT_SECRET": ""
+    "SPOTIFY_CLIENT_SECRET": "",
+    "flask_port": 7000
 }
